Aggiunta tolleranza 0.01 mm per posizioni ricavate da Dicom